[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["<filippov nikita> <<filippovnr73@gmail.com>>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
